Show metadata about item in FeedView
Display datetime and author of item.

--- a/lightread/data/ui/feedview/template.html
+++ b/lightread/data/ui/feedview/template.html
@@ -2,7 +2,12 @@
     <head>
     </head>
     <body>
+        <header id="lr_metadata">
+            <span id="lr_author">{author}</span>
+            <span id="lr_datetime">{datetime:%c}</span>
+        </header>
         <h1 id="lr_title"><a href="{href}">{title}</a></h1>
+        <hr />
         <article id="lr_content">{content}<article>
     </body>
 </html>
