Update templates for feedview

--- a/trifle/data/ui/feedview/template.html
+++ b/trifle/data/ui/feedview/template.html
@@ -2,12 +2,12 @@
     <head>
     </head>
     <body>
-        <header id="lr_metadata">
-            <span id="lr_author">{author}</span>
-            <span id="lr_datetime">{datetime:%c}</span>
-        </header>
-        <h1 id="lr_title"><a href="{href}">{title}</a></h1>
+        <header>
+            <span id="lr_author"></span>
+            <span id="lr_datetime"></span>
+        <h1><a id="lr_title"></a></h1>
         <hr />
-        <article id="lr_content">{content}<article>
+        </header>
+        <article id="lr_content"><article>
     </body>
 </html>
