Detect youtube and vimeo iframes and replace them
Replacement is a regular link for now – we need it because in most cases
without JavaScript we cannot provide user with iframed players. However
in future we could use a tool like youtube-dl and show native html5
player for such videos.

--- a/trifle/data/ui/feedview/template.html
+++ b/trifle/data/ui/feedview/template.html
@@ -2,12 +2,18 @@
     <head>
     </head>
     <body>
+        <!-- Replacements for iframes -->
+        <div id="trifle_replacements">
+            <a id="trifle_youtube_repl">Youtube video</a>
+            <a id="trifle_vimeo_repl">Vimeo video</a>
+        </div>
+
         <header>
-            <span id="lr_author"></span>
-            <span id="lr_datetime"></span>
-        <h1><a id="lr_title"></a></h1>
+            <span id="trifle_author"></span>
+            <span id="trifle_datetime"></span>
+        <h1><a id="trifle_title"></a></h1>
         <hr />
         </header>
-        <article id="lr_content"><article>
+        <article id="trifle_content"><article>
     </body>
 </html>
