Simplify loading of template and stylesheets
We can now do that, because since bb29653 we use DOM to show contents of
an item.

--- a/trifle/data/ui/feedview/template.html
+++ b/trifle/data/ui/feedview/template.html
@@ -1,11 +1,13 @@
 <html>
     <head>
+        <title></title>
+        <link type="text/css" rel="stylesheet" href="style.css" />
     </head>
     <body>
         <!-- Replacements for iframes -->
         <div id="trifle_replacements">
-            <a id="trifle_youtube_repl">Youtube video</a>
-            <a id="trifle_vimeo_repl">Vimeo video</a>
+            <a id="trifle_youtube_repl">A Youtube video</a>
+            <a id="trifle_vimeo_repl">A Vimeo video</a>
         </div>
 
         <header>
