Show a statusbar when hovering over a link
Fixes #8

--- a/trifle/data/ui/feedview/template.html
+++ b/trifle/data/ui/feedview/template.html
@@ -16,6 +16,7 @@
         <h1><a id="trifle_title"></a></h1>
         <hr />
         </header>
-        <article id="trifle_content"><article>
+        <article id="trifle_content"></article>
+        <div id="trifle_statusbar">http://google.com/</div>
     </body>
 </html>
