Make iframe handling saner
Will display all iframes to user as stylized links and won't do any
sheningans trying to detect videos.

--- a/trifle/data/ui/feedview/template.html
+++ b/trifle/data/ui/feedview/template.html
@@ -4,10 +4,9 @@
         <link type="text/css" rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <!-- Replacements for iframes -->
+        <!-- Content replacements -->
         <div id="trifle_replacements">
-            <a id="trifle_youtube_repl">A Youtube video</a>
-            <a id="trifle_vimeo_repl">A Vimeo video</a>
+            <a id="trifle_iframe"></a>
         </div>
 
         <header>
