Try to make webview look fine on whatever theme
Still no guarantee it looks OK on, for example, Ambiance.

--- a/trifle/data/ui/feedview/template.html
+++ b/trifle/data/ui/feedview/template.html
@@ -2,6 +2,7 @@
     <head>
         <title></title>
         <link type="text/css" rel="stylesheet" href="style.css" />
+        <link type="text/css" rel="stylesheet" href="" id="trifle_userstyle"/>
     </head>
     <body>
         <!-- Content replacements -->
