Justify the text and remove unnecessary markup

--- a/trifle/data/ui/feedview/template.html
+++ b/trifle/data/ui/feedview/template.html
@@ -5,11 +5,7 @@
         <link type="text/css" rel="stylesheet" href="" id="trifle_userstyle"/>
     </head>
     <body>
-        <!-- Content replacements -->
-        <div id="trifle_replacements">
-            <a id="trifle_iframe"></a>
-        </div>
         <article id="trifle_content"></article>
-        <div id="trifle_statusbar">http://google.com/</div>
+        <div id="trifle_statusbar"></div>
     </body>
 </html>
